Some Changes in langcontroller
