# swagger/swagger.json
@@ -914,13 +914,6 @@
                         "description": "here you can pass ENGlanguage message  converted otherlanguage value",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "in": "header",
-                        "name": "Authorization",
-                        "description": "Bearer YourAccessToken",
-                        "required": true,
-                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -950,13 +943,6 @@
                         "description": "lable code",
                         "required": true,
                         "type": "file"
-                    },
-                    {
-                        "in": "header",
-                        "name": "Authorization",
-                        "description": "Bearer YourAccessToken",
-                        "required": true,
-                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -979,6 +965,49 @@
                 ],
                 "description": "new langouge code\n\u003cbr\u003e",
                 "operationId": "LangLableController.Insert language lable",
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "lable_code",
+                        "description": "lable code",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "section",
+                        "description": "section like success or failed or errors",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "ENGlang_value",
+                        "description": "here you pass original message value in english",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/object"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/language_lable/lang_lable_UpdateAPI": {
+            "post": {
+                "tags": [
+                    "language_lable"
+                ],
+                "description": "update lables\n\u003cbr\u003e",
+                "operationId": "LangLableController.update language lable",
                 "parameters": [
                     {
                         "in": "formData",
@@ -1048,13 +1077,6 @@
                         "in": "formData",
                         "name": "otherlang_value",
                         "description": "here you can pass ENGlanguage message  converted otherlanguage value",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "header",
-                        "name": "Authorization",
-                        "description": "Bearer YourAccessToken",
                         "required": true,
                         "type": "string"
                     }
@@ -1253,6 +1275,26 @@
                         "type": "string"
                     }
                 ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/object"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/user/metrics": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "description": "example\n\u003cbr\u003e",
+                "operationId": "UserController.matrics",
                 "responses": {
                     "201": {
                         "description": "",
